app/styles/molecules/sections/_creative-process.scss
$process-height : 1421px;
$process-outer  : 100px;
$process-width  : 892px;

$process-end-height : 246px;
$process-end-width  : 247px;

.creative-process {
  @extend %background-water;
  @include box-shadow(inset rgba(0, 0, 0, .2) 0 25px 25px);
  border-top : 2px solid lighten(getColor(water), 10%);

  @include query($up-mama-bear) {
    height         : $process-height - $process-outer;
    padding-bottom : 0;
    position       : relative;
  }

  .section-title {
    @extend %background-water;
    position : relative;
    z-index  : 2;
  }

  .process {
    @include box-sizing(border-box);

    @include query($up-mama-bear) {
      background  : url(../images/backgrounds/creative-process.png) no-repeat top center;
      height      : $process-height;
      left        : 50%;
      margin-left : ($process-width / 2) * -1;
      padding-top : 240px;
      padding-bottom : 0;
      position    : absolute;
      top         : -($process-outer);
      width       : $process-width;
    }

    .process-end {
      @include opacity(0);
      @include transition(opacity 0.75s ease, transform 1s ease);

      bottom      : -($process-end-height / 2);
      left        : 50%;
      margin-left : -($process-end-width / 2);
      position    : absolute;

      // Hide element when path isn't shown.
      @include query($mama-bear) {
        display : none;
      }

      &.visible {
        @include opacity(1);
        @include transform(rotateZ(-360deg));
      }
    }

    .process-item {
      @include display-box;
      @include box-orient(vertical);
      @include box-align(center);

      @extend %text-left;
      @extend %margin-bottom-large;

      // Special display on breakpoint.
      @include query($up-mama-bear) {

        // Big spaced item.
        &.big {
          margin : 85px 0;
        }

        // Inverse item.
        &.inverse {
          text-align : right;

          .process-logo {
            @include box-ordinal-group(2);
            margin-right : 0;
          }

          .process-info {
            margin-right : getSpace(xx-large);
          }
        }
      }

      // Make process logo and process info initially hidden.
      .process-logo,
      .process-info {
        @include opacity(0);
      }

      // Make process logo and process info visible when item
      // appear on viewport.
      &.visible {
        .process-logo, .process-info {
          @include opacity(1);
        }

        .process-logo {
          @include transform(rotateY(-360deg));
        }
      }

      .process-logo {
        @extend %margin-right-xx-large;
        @include transition(opacity 0.5s ease, transform 1s ease);
        min-width : 151px;

        @include query($baby-bear) {
          display : none;
        }
      }


      .process-info {
        @include transition(opacity 0.5s ease 0.3s);

        p {
          @extend %text-deep-sea;

          @include query($up-baby-bear) {
            font-size : getFontSize(large);
          }
        }
      }
    }
  }
}

